--- a/src/index.css
+++ b/src/index.css
@@ -66,3 +66,16 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+
+.show {
+  color: #535bf2;
+}
+
+.genres {
+  color: #f4543f;
+}
+
+.ratings {
+  color: #58c64a;
+}
+
